# isotropicremesher

./: LICENSE  README.md
src/: halfedgemesh.cpp  halfedgemesh.h  isotropichalfedgemesh.cpp  isotropichalfedgemesh.h  isotropicremesher.cpp  isotropicremesher.h  vector3.h
test/: CMakeLists.txt  main.cpp
